<resources>
    <string name="app_name">Dr Roster</string>
    <string name="department_name_hint">Department name</string>
    <string name="next_button_text">NEXT</string>
    <string name="pick_month_button_text">Choose Month</string>
    <string name="choose_month_dialog_button">OK</string>
    <string name="ChooseMonthActivityBarTitle">Month</string>
    <string name="FirsCallActivityBarTitle">1st Call</string>
    <string name="navigationView_previous_button_text">PREVIOUS</string>
    <string name="dialog_choose_date_button">Set dates</string>
    <string name="dialog_calerdar_title">Choose Leave dates</string>
    <string name="add_new_name_footer">Add new name</string>
    <string name="add_new_duty_footer">Add new duty</string>
    <string name="add_new_friend_footer_view_text">Add new friend</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_button_navigation_view">FINISHED</string>
    <string name="generate_random_acitvity_button">GENERATE</string>
    <string name="month_title_final_review">Month</string>
    <string name="first_call_title_final_review">1st Call</string>
    <string name="second_call_title_final_review">2nd Call</string>
    <string name="third_call_title_final_review">3rd Call</string>
    <string name="date_call_title_final_review">Leave</string>
    <string name="additional_duties_title_final_review">Additional Duties</string>

    <!-- Action bar titles-->
    <string name="default_menu_title">Dr Roster</string>
    <string name="sign_in_menu_title">Dr Roster</string>
    <string name="genros_month_menu_title">Month</string>
    <string name="genros_first_call_menu_title">1st Call</string>
    <string name="genros_second_call_menu_title">2nd Call</string>
    <string name="genros_third_call_menu_title">3rd Call</string>
    <string name="genros_leave_menu_title">Leave</string>
    <string name="genros_additional_duties_menu_title">Addition Duties</string>
    <string name="genros_final_review_menu_title">Final Review</string>
    <string name="random_first_call_menu_title">1st Call Randomization</string>
    <string name="random_second_call_menu_title">2nd Call Randomization</string>
    <string name="random_third_call_menu_title">3rd Call Randomization</string>

    <!-- drawer strings-->
    <string name="drawer_menu_add_new">Add new month</string>
    <string name="drawer_menu_delete_month">Delete roster</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="add_new_roster">Add new roster</string>
    <string name="main_list_first_call_title">1st call:</string>
    <string name="main_list_second_call_title">2nd call:</string>
    <string name="main_list_third_call_title">3rd call:</string>
    <string name="main_list_leave_title">Leave:</string>
    <string name="toast_choose_random_type">Please choose random type</string>
    <string name="toast_choose_more_people">Please choose more then 2 people</string>

    <string name="ad_unit_id_random_activity">ca-app-pub-4429203365193534/4581922402</string>
    <string name="ad_unit_id_main_activity">ca-app-pub-4429203365193534/9199082003</string>


    <!-- data for random_list_fragment-->
    <string-array name="null_data">
        <item>No people on call </item>
    </string-array>
</resources>
